# aml-transformer

./: .gitignore  README.md  docker-compose.yml  requirements.txt  schema.sql
research/: cel_softmax.py  dataset.py  linear_layers.py  neuron.py  oprimizers.py  validation_benchmark.py
src/: cleaning_script.py  main.py  train.py
src/data/: dataset.py  prepare.py
src/model/: attention.py  bigram.py  gpt.py  transformer.py
src/tokenizer/: CMakeLists.txt  aml_tokenizer.cpp  aml_tokenizer.hpp  bindings.cpp  test_tokenizer.cpp
src/tracker/api/: main.py  schemas.py
src/tracker/api/routers/: epochs.py  runs.py
src/tracker/db/: connection.py  epochs.py  runs.py
src/visualization/: plot.py
tests/: test_bigram.py
tests/data/: test_dataset.py  test_prepare.py
tests/model/: test_attention.py  test_model.py  test_transformer.py
